--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "cli",
     "react"
   ],
-  "author": "Votre nom",
-  "license": "MIT",
+  "author": "",
+  "license": "",
   "dependencies": {
     "@babel/parser": "^7.22.0",
     "@babel/traverse": "^7.22.0",
