--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx src/cli.ts",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts",
+    "format:check": "prettier --check src/**/*.ts"
   },
   "keywords": [
     "translation",
@@ -32,13 +36,21 @@
     "ora": "^7.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@types/babel__parser": "^7.1.1",
     "@types/babel__traverse": "^7.20.1",
     "@types/inquirer": "^9.0.8",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.4.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
     "jest": "^29.6.0",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.1.0"
   }
 }
