feat: improve TypeScript configuration and add tsx dev dependency
- Enhanced tsconfig.json with better module resolution
- Added tsx for TypeScript execution
- Improved build configuration with additional compiler options
- Better type checking and development experience

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,13 @@
     "resolveJsonModule": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "types": ["node"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.md", "test-translator.ts"]
 }
