--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^20.4.0",
     "jest": "^29.6.0",
     "ts-node": "^10.9.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.1.0"
   }
 }
